@@ -715,12 +715,14 @@ yearly_disaster_pulse = {
 		IRCK3_earthquake.2 # 60 BC earthquake on Portugal and Galicia coasts
 		delay = { days = { 1 364 } }
 		IRCK3_earthquake.3 # 17 AD Lydia earthquake
-		delay = { days = { 34 } }
+		delay = { days = { 35 } }
 		IRCK3_earthquake.4 # AD 62 Pompeii earthquake
 		delay = { days = { 346 } }
 		IRCK3_earthquake.5 # AD 115 Antioch earthquake
 		delay = { days = { 138 } }
 		IRCK3_earthquake.6 # AD 363 Galilee earthquake
+		delay = { days = { 201 } }
+		IRCK3_earthquake.7 # AD 365 Crete earthquake
 	}
 	random_events = {
 		#1508 = 0
