@@ -594,3 +594,206 @@ IRCK3_earthquake.6 = {
         }
     }
 }
+
+#365 Crete earthquake
+#http://www.drgeorgepc.com/Tsunami365ADeEastMedSea.html
+IRCK3_earthquake.7 = {
+    type = country_event
+    title = IRCK3_earthquake.7.t
+    desc = IRCK3_earthquake.7.desc
+    picture = natural_disaster
+    fire_only_once = yes
+    goto_location = p:368 #Westernmost province of Crete
+
+    trigger = {
+    	OR = {
+    		#Cyprus - affected by default
+    		any_owned_province = {
+		    	is_in_area = cyprus_area
+	    		is_coastal = yes
+    			NOR = {
+	    			province_id = 6431
+	    			province_id = 334
+    			}
+    		}
+    		owns = 6431 # Kourion - ravaged
+    		owns = 334 # Paphos - ravaged
+
+    		#Peloponessus
+    		any_owned_province = {
+		    	is_in_area = south_peleponnesos_area
+	    		is_coastal = yes
+    			NOR = {
+	    			province_id = 433
+	    			province_id = 471
+    			}
+    		}
+    		owns = 434 #Patras - ravaged
+    		owns = 433 # ravaged
+    		owns - 471 #Kythera - ravaged
+
+    		#Crete - ravaged
+    		any_owned_province = {
+		    	is_in_area = crete_area
+    		}
+
+    		#Cyrenaica
+    		any_owned_province = {
+		    	is_in_area = cyrenaica_superioris_area
+	    		is_coastal = yes
+    		}
+
+    		#Egypt
+    		any_owned_province = {
+    			OR = {
+    				is_in_area = western_delta_area
+    				is_in_area = central_delta_area
+    			}
+	    		is_coastal = yes
+    		}
+    	}
+    	AND = {
+   			current_date >= 1118.1.1 #365 AD
+   			current_date < 1119.1.1
+    	}
+    }
+
+    immediate = {
+    }
+
+    option = {      
+        name = IRCK3_earthquake.7.a
+        add_treasury = {
+			subtract = root.has_monthly_income
+			multiply = 4
+		}
+		current_ruler = {
+			add_popularity = popularity_medium
+		}
+        every_owned_province = {
+			limit = {
+				OR = {
+	    			province_id = 6431
+    				province_id = 334
+    				province_id = 434
+		    		province_id = 433
+		    		province_id - 471
+		    		is_in_area = crete_area
+	    		}
+			}
+	        custom_tooltip = "earthquake_medium.tt"
+			add_province_modifier = {
+				name = province_diminishment_earthquake_ravaged
+				duration = 730
+			}
+			hidden_effect = {
+				province_pop_disaster_medium = yes
+			}
+        }
+		every_owned_province = {
+			limit = {
+				OR = {
+					AND = {
+						is_in_area = cyprus_area
+			    		is_coastal = yes
+		    			NOR = {
+			    			province_id = 6431
+			    			province_id = 334
+		    			}
+					}
+					AND = {
+						is_in_area = south_peleponnesos_area
+			    		is_coastal = yes
+		    			NOR = {
+			    			province_id = 433
+			    			province_id = 471
+		    			}
+					}
+					AND = {
+				    	is_in_area = cyrenaica_superioris_area
+			    		is_coastal = yes
+		    		}
+		    		AND = {
+		    			OR = {
+		    				is_in_area = western_delta_area
+		    				is_in_area = central_delta_area
+		    			}
+			    		is_coastal = yes
+		    		}
+				}
+			}
+	        custom_tooltip = "earthquake_minor.tt"
+			add_province_modifier = {
+				name = province_diminishment_earthquake_affected
+				duration = 730
+			}
+			hidden_effect = {
+				province_pop_disaster_minor = yes
+			}
+        }
+    }
+    option = {
+        name = IRCK3_earthquake.7.b
+        every_owned_province = {
+			limit = {
+				OR = {
+	    			province_id = 6431
+    				province_id = 334
+    				province_id = 434
+		    		province_id = 433
+		    		province_id - 471
+		    		is_in_area = crete_area
+	    		}
+			}
+	        custom_tooltip = "earthquake_medium.tt"
+			add_province_modifier = {
+				name = province_diminishment_earthquake_ravaged
+				duration = 2555
+			}
+			hidden_effect = {
+				province_pop_disaster_medium = yes
+			}
+        }
+		every_owned_province = {
+			limit = {
+				OR = {
+					AND = {
+						is_in_area = cyprus_area
+			    		is_coastal = yes
+		    			NOR = {
+			    			province_id = 6431
+			    			province_id = 334
+		    			}
+					}
+					AND = {
+						is_in_area = south_peleponnesos_area
+			    		is_coastal = yes
+		    			NOR = {
+			    			province_id = 433
+			    			province_id = 471
+		    			}
+					}
+					AND = {
+				    	is_in_area = cyrenaica_superioris_area
+			    		is_coastal = yes
+		    		}
+		    		AND = {
+		    			OR = {
+		    				is_in_area = western_delta_area
+		    				is_in_area = central_delta_area
+		    			}
+			    		is_coastal = yes
+		    		}
+				}
+			}
+	        custom_tooltip = "earthquake_minor.tt"
+			add_province_modifier = {
+				name = province_diminishment_earthquake_affected
+				duration = 2555
+			}
+			hidden_effect = {
+				province_pop_disaster_minor = yes
+			}
+        }
+    }
+}
